css/content.css
#gc-container {
}

.gc-font {
    font-size: 16px;
    font-family: "Lato", "PingFang TC", "Helvetica Neue", Helvetica, "微軟正黑體", "新細明體", Arial, sans-serif;
}

#gc-hint-overlay {
    height: 100%;
    width: 100%;
    position: fixed;
    z-index: 10000;
    top: 0px;
    left: 0px;
    background-color: rgb(0,0,0);
    background-color: rgba(0,0,0, 0.2);
    overflow-x: hidden;
    cursor: crosshair;

    text-align: center;
    text-decoration: none;
    padding: 80px 20px;
    display: block;
}

#gc-hint-overlay span{
    font-size: 50px;
    color: #ffffff;
}

#gc-selection-container {
    height: 100%;
    width: 100%;
    position: fixed;
    z-index: 10000;
    top: 0px;
    left: 0px;
}

#gc-selection {
    position: absolute;
    background: #e0eaf1;
    border: 1px solid #0c65a5;
    opacity: 0.5;
}

#gc-selection.selected {
    background: #E0F1E4;
    border-color: #0CA50E;
    opacity: 0.5;
}

.gc-selection-btn {
    height: 30px;
    line-height: 30px;
    position: absolute;
    border: 3px solid #777;
    border-radius: 3px;
    background-color: #fff;
    text-align: center;
    cursor: pointer;
    display: none;
}

#gc-selection-confirm {
    width: 70px;
}
#gc-selection-cancel {
    left: 80px;
    width: 60px;
    margin-left: 71px;
}


#gc-capframe-border {
    position: fixed;
    z-index: 10000;
    top: 0px;
    bottom: 0px;
    left: 0px;
    right: 0px;
    border-image: initial;
    touch-action: none;
    pointer-events: auto;

}

#gc-capframe-toolbar {
    height: 36px;
    width: 100%;
    min-width: 170px;
    box-sizing: content-box;
    background-color: rgba(0, 0, 0, 0.8);
    border: 3px solid #000;
    border-bottom: none;
}

#gc-capframe-btnGifStart {
    width: 60px;
}

#gc-capframe-btnGifStop {
    display: none;
    width: 60px;
}

#gc-capframe-btnCap {
    width: 60px;
}

#gc-capframe-end {
    width: 20px;
}

.gc-capframe-btn {
    position: relative;
    top: 5px;
    height: 26px;
    margin-left: 5px;
    display: inline-block;
    border-radius: 3px;
    color: #000;
    background-color: #e1e1e1;
    text-align: center;
    white-space: nowrap;
    line-height: 26px;
    cursor: pointer;
}

#gc-gifcap-toolbar {
    display: none;
    color: #fff;
    
}

#gc-capframe-frame {
    display: flex;
    flex-direction: row;
    height: 100%;
    border: 3px solid #000;
    box-sizing: content-box;
    user-select: none;
    background-color:rgba(0,0,0,0);
}

#gc-capframe  {
    width: 100%;
    height: 100%;
    background-color:rgba(0,0,0,0);
    box-sizing: content-box;
}

#gc-debug {
    /* Comment next line to start debug */
    display: none;
    /* ================================ */
    height: 100%;
    width: 100%;
    position: fixed;
    z-index: 9999;
    top: 0px;
    left: 0px;
    font-size: 20px;
    color: #000;
    margin: 200px 100px;
}

